Add Nav Section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,32 @@
     <link rel="stylesheet" href="./styles/Style.css">
     <link rel="stylesheet" href="./styles/responsive.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <!-- Navbar  -->
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./images/logo.png" alt="School Logo">
+                <span>SCHOOL</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Facilities</a></li>
+                <li><a href="#">Admission</a></li>
+            </ul>
+            <div class="contact-btn">
+                <button>Contact</button>
+            </div>
+            <div class="mobile-menu">
+                <span>&#9776;</span>
+            </div>
+        </nav>
+    </header>
+    <main></main>
+<footer></footer>
 </body>
+
 </html>
