--- a/index.html
+++ b/index.html
@@ -32,7 +32,24 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>
+                    Empowering <span class="highlight-orange">students</span> from small age 
+                    <span class="highlight-blue">towards vision</span>
+                </h1>
+                <p>
+                    With the courage, Confidence, Creativity, and Compassion to make 
+                    their Unique Contribution in a Diverse and Dynamic World.
+                </p>
+                <button class="enroll-btn">Enroll Now</button>
+            </div>
+            <div class="hero-image">
+                <img src="./images/hero-kids.png" alt="Hero Kids">
+            </div>
+        </section>
+    </main>
 <footer></footer>
 </body>
 
