--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navbar  -->
         <nav class="navbar">
             <div class="logo">
-                <img src="./images/logo.png" alt="School Logo">
+                <img src="./images/logo.png" alt="Logo">
                 <span>SCHOOL</span>
             </div>
             <ul class="nav-links">
@@ -33,14 +33,15 @@
         </nav>
     </header>
     <main>
+        <!-- hero  -->
         <section class="hero-section">
             <div class="hero-content">
                 <h1>
-                    Empowering <span class="highlight-orange">students</span> from small age 
+                    Empowering <span class="highlight-orange">students</span> from small age
                     <span class="highlight-blue">towards vision</span>
                 </h1>
                 <p>
-                    With the courage, Confidence, Creativity, and Compassion to make 
+                    With the courage, Confidence, Creativity, and Compassion to make
                     their Unique Contribution in a Diverse and Dynamic World.
                 </p>
                 <button class="enroll-btn">Enroll Now</button>
@@ -49,8 +50,52 @@
                 <img src="./images/hero-kids.png" alt="Hero Kids">
             </div>
         </section>
+
+        <!-- standard-curriculum -->
+
+
+        <section class="standard-curriculum">
+            <div class="container">
+                <h2 class="section-title">Standard Curriculum</h2>
+                <div class="cards-wrapper">
+                    <div class="card card-kinder">
+                        <img src="./images/kinder.png" alt="Kinder" class="card-image">
+                        <h3 class="card-title">Kinder (3-6 Years)</h3>
+                        <p class="card-description">
+                            Nurture foundational skills and ignite curiosity through interactive learning designed for
+                            young minds.
+                        </p>
+                        <a href="#" class="read-more">Read More</a>
+                    </div>
+                    <div class="card card-elementary">
+                        <img src="./images/elementary.png" alt="Elementary School" class="card-image">
+                        <h3 class="card-title">Elementary School</h3>
+                        <p class="card-description">
+                            Build strong academic foundations with a balanced approach to creativity, critical thinking,
+                            and problem-solving.
+                        </p>
+                        <a href="#" class="read-more">Read More</a>
+                    </div>
+                    <div class="card card-middle">
+                        <img src="./images/middle.png" alt="Middle School" class="card-image">
+                        <h3 class="card-title">Middle (10-16 Years)</h3>
+                        <p class="card-description">
+                            Empower students with advanced knowledge and life skills, preparing them for future academic
+                            and personal success.
+                        </p>
+                        <a href="#" class="read-more">Read More</a>
+                    </div>
+                </div>
+                <div class="arrow-buttons">
+                    <button class="arrow left-arrow">
+                        < </button>
+                            <button class="arrow right-arrow"> > </button>
+                </div>
+            </div>
+        </section>
+
     </main>
-<footer></footer>
+    <footer></footer>
 </body>
 
 </html>
