--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/Style.css">
     <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -88,8 +89,8 @@
                 </div>
                 <div class="arrow-buttons">
                     <button class="arrow left-arrow">
-                        < </button>
-                            <button class="arrow right-arrow"> > </button>
+                        <i class="fa-solid fa-arrow-left"></i> </button>
+                            <button class="arrow right-arrow"><i class="fa-solid fa-arrow-right"></i></button>
                 </div>
             </div>
         </section>
