--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button>Contact</button>
             </div>
             <div class="mobile-menu">
-                <span>&#9776;</span>
+                <span><i class="fa-solid fa-bars"></i></span>
             </div>
         </nav>
     </header>
@@ -94,6 +94,49 @@
                 </div>
             </div>
         </section>
+<!-- story section --><section class="our-stories">
+    <h2 class="our-stories-title">Our Stories</h2>
+    <div class="our-stories-cards-container">
+        <div class="our-stories-card our-stories-card-1">
+            <img src="./images/story-1.png" alt="Story 1" class="our-stories-card-image">
+            <div class="our-stories-card-content">
+                <h3 class="our-stories-card-title">A fun toddler coloring training on classroom</h3>
+                <p class="our-stories-card-description">Beautiful branding for changes by Never Now in Australia...</p>
+            </div>
+        </div>
+        <div class="our-stories-card our-stories-card-2">
+            <img src="./images/story-2.png" alt="Story 2" class="our-stories-card-image">
+            <div class="our-stories-card-content">
+                <h3 class="our-stories-card-title">Find out if a school fits the family’s needs</h3>
+                <p class="our-stories-card-description">Making informed decisions to ensure a brighter future...</p>
+            </div>
+        </div>
+        <div class="our-stories-card our-stories-card-3">
+            <img src="./images/story-3.png" alt="Story 3" class="our-stories-card-image">
+            <div class="our-stories-card-content">
+                <h3 class="our-stories-card-title">Summer math & literacy centres for kids</h3>
+                <p class="our-stories-card-description">Engaging activities to keep children learning all summer...</p>
+            </div>
+        </div>
+        <div class="our-stories-card our-stories-card-4">
+            <img src="./images/story-4.png" alt="Story 4" class="our-stories-card-image">
+            <div class="our-stories-card-content">
+                <h3 class="our-stories-card-title">Classroom management techniques for new tutors</h3>
+                <p class="our-stories-card-description">Practical strategies for managing students effectively...</p>
+            </div>
+        </div>
+        <div class="our-stories-card our-stories-card-5">
+            <img src="./images/story-5.png" alt="Story 5" class="our-stories-card-image">
+            <div class="our-stories-card-content">
+                <h3 class="our-stories-card-title">Conversation rhymes improve kids listening</h3>
+                <p class="our-stories-card-description">Boosting active listening through fun rhymes...</p>
+            </div>
+        </div>
+    </div>
+    <div class="our-stories-view-all">
+        <button class="our-stories-view-all-button ">View All</button>
+    </div>
+</section>
 
     </main>
     <footer></footer>
