add footer section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,41 @@
 </section>
 
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <!-- Logo and About -->
+        <div class="footer-column footer-about">
+          <div class="footer-logo">
+            <img class="footer-img" src="./images/logo.png" alt="Kids Education Logo">
+            <span class="footer-title">Kids Education</span>
+          </div>
+          <p>
+            Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan
+            bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+          </p>
+        </div>
+    
+        <!-- Navigation Links -->
+        <div class="footer-column footer-links">
+          <h4>About School</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">Admission</a></li>
+          </ul>
+        </div>
+    
+        <!-- Social Media -->
+        <div class="footer-column footer-social">
+          <h4>Keep In Touch</h4>
+          <div class="footer-icon">
+            <a href="#"><img src="./images/fb.png" alt="Facebook"></a>
+            <a href="#"><img src="./images/dribble.png" alt="Dribbble"></a>
+            <a href="#"><img src="./images/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="./images/google+.png" alt="Google+"></a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
