--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/Style.css">
     <link rel="stylesheet" href="./styles/responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -90,90 +92,95 @@
                 <div class="arrow-buttons">
                     <button class="arrow left-arrow">
                         <i class="fa-solid fa-arrow-left"></i> </button>
-                            <button class="arrow right-arrow"><i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="arrow right-arrow"><i class="fa-solid fa-arrow-right"></i></button>
                 </div>
             </div>
         </section>
-<!-- story section --><section class="our-stories">
-    <h2 class="our-stories-title">Our Stories</h2>
-    <div class="our-stories-cards-container">
-        <div class="our-stories-card our-stories-card-1">
-            <img src="./images/story-1.png" alt="Story 1" class="our-stories-card-image">
-            <div class="our-stories-card-content">
-                <h3 class="our-stories-card-title">A fun toddler coloring training on classroom</h3>
-                <p class="our-stories-card-description">Beautiful branding for changes by Never Now in Australia...</p>
+        <!-- story section -->
+        <section class="our-stories">
+            <h2 class="our-stories-title">Our Stories</h2>
+            <div class="our-stories-cards-container">
+                <div class="our-stories-card our-stories-card-1">
+                    <img src="./images/story-1.png" alt="Story 1" class="our-stories-card-image">
+                    <div class="our-stories-card-content">
+                        <h3 class="our-stories-card-title">A fun toddler coloring training on classroom</h3>
+                        <p class="our-stories-card-description">Beautiful branding for changes by Never Now in
+                            Australia...</p>
+                    </div>
+                </div>
+                <div class="our-stories-card our-stories-card-2">
+                    <img src="./images/story-2.png" alt="Story 2" class="our-stories-card-image">
+                    <div class="our-stories-card-content">
+                        <h3 class="our-stories-card-title">Find out if a school fits the family’s needs</h3>
+                        <p class="our-stories-card-description">Making informed decisions to ensure a brighter future...
+                        </p>
+                    </div>
+                </div>
+                <div class="our-stories-card our-stories-card-3">
+                    <img src="./images/story-3.png" alt="Story 3" class="our-stories-card-image">
+                    <div class="our-stories-card-content">
+                        <h3 class="our-stories-card-title">Summer math & literacy centres for kids</h3>
+                        <p class="our-stories-card-description">Engaging activities to keep children learning all
+                            summer...</p>
+                    </div>
+                </div>
+                <div class="our-stories-card our-stories-card-4">
+                    <img src="./images/story-4.png" alt="Story 4" class="our-stories-card-image">
+                    <div class="our-stories-card-content">
+                        <h3 class="our-stories-card-title">Classroom management techniques for new tutors</h3>
+                        <p class="our-stories-card-description">Practical strategies for managing students
+                            effectively...</p>
+                    </div>
+                </div>
+                <div class="our-stories-card our-stories-card-5">
+                    <img src="./images/story-5.png" alt="Story 5" class="our-stories-card-image">
+                    <div class="our-stories-card-content">
+                        <h3 class="our-stories-card-title">Conversation rhymes improve kids listening</h3>
+                        <p class="our-stories-card-description">Boosting active listening through fun rhymes...</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="our-stories-card our-stories-card-2">
-            <img src="./images/story-2.png" alt="Story 2" class="our-stories-card-image">
-            <div class="our-stories-card-content">
-                <h3 class="our-stories-card-title">Find out if a school fits the family’s needs</h3>
-                <p class="our-stories-card-description">Making informed decisions to ensure a brighter future...</p>
+            <div class="our-stories-view-all">
+                <button class="our-stories-view-all-button ">View All</button>
             </div>
-        </div>
-        <div class="our-stories-card our-stories-card-3">
-            <img src="./images/story-3.png" alt="Story 3" class="our-stories-card-image">
-            <div class="our-stories-card-content">
-                <h3 class="our-stories-card-title">Summer math & literacy centres for kids</h3>
-                <p class="our-stories-card-description">Engaging activities to keep children learning all summer...</p>
-            </div>
-        </div>
-        <div class="our-stories-card our-stories-card-4">
-            <img src="./images/story-4.png" alt="Story 4" class="our-stories-card-image">
-            <div class="our-stories-card-content">
-                <h3 class="our-stories-card-title">Classroom management techniques for new tutors</h3>
-                <p class="our-stories-card-description">Practical strategies for managing students effectively...</p>
-            </div>
-        </div>
-        <div class="our-stories-card our-stories-card-5">
-            <img src="./images/story-5.png" alt="Story 5" class="our-stories-card-image">
-            <div class="our-stories-card-content">
-                <h3 class="our-stories-card-title">Conversation rhymes improve kids listening</h3>
-                <p class="our-stories-card-description">Boosting active listening through fun rhymes...</p>
-            </div>
-        </div>
-    </div>
-    <div class="our-stories-view-all">
-        <button class="our-stories-view-all-button ">View All</button>
-    </div>
-</section>
+        </section>
 
     </main>
     <footer class="footer">
         <!-- Logo and About -->
         <div class="footer-column footer-about">
-          <div class="footer-logo">
-            <img class="footer-img" src="./images/logo.png" alt="Kids Education Logo">
-            <span class="footer-title">Kids Education</span>
-          </div>
-          <p>
-            Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan
-            bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
-          </p>
+            <div class="footer-logo">
+                <img class="footer-img" src="./images/logo.png" alt="Kids Education Logo">
+                <span class="footer-title">Kids Education</span>
+            </div>
+            <p>
+                Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan
+                bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+            </p>
         </div>
-    
+
         <!-- Navigation Links -->
         <div class="footer-column footer-links">
-          <h4>About School</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Facilities</a></li>
-            <li><a href="#">Admission</a></li>
-          </ul>
+            <h4>About School</h4>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Facilities</a></li>
+                <li><a href="#">Admission</a></li>
+            </ul>
         </div>
-    
+
         <!-- Social Media -->
         <div class="footer-column footer-social">
-          <h4>Keep In Touch</h4>
-          <div class="footer-icon">
-            <a href="#"><img src="./images/fb.png" alt="Facebook"></a>
-            <a href="#"><img src="./images/dribble.png" alt="Dribbble"></a>
-            <a href="#"><img src="./images/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="./images/google+.png" alt="Google+"></a>
-          </div>
+            <h4>Keep In Touch</h4>
+            <div class="footer-icon">
+                <a href="#"><img src="./images/fb.png" alt="Facebook"></a>
+                <a href="#"><img src="./images/dribble.png" alt="Dribbble"></a>
+                <a href="#"><img src="./images/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="./images/google+.png" alt="Google+"></a>
+            </div>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
