--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="./images/logo.png" alt="Logo">
-                <span>SCHOOL</span>
+                <span class="Nav-logo-text">SCHOOL</span>
             </div>
+            
+
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Facilities</a></li>
-                <li><a href="#">Admission</a></li>
+                <li class="nav-home"><a href="#">Home</a></li>
+                <li class="nav-about"><a href="#">About</a></li>
+                <li class="nav-facilities"><a href="#">Facilities</a></li>
+                <li class="nav-admission"><a href="#">Admission</a></li>
             </ul>
+            
             <div class="contact-btn">
                 <button>Contact</button>
             </div>
