Completed Standard Section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             Nurture foundational skills and ignite curiosity through interactive learning designed for
                             young minds.
                         </p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="#" class="read-more blue-style">Read More</a>
                     </div>
                     <div class="card card-elementary">
                         <img src="./images/elementary.png" alt="Elementary School" class="card-image">
@@ -80,7 +80,7 @@
                             Build strong academic foundations with a balanced approach to creativity, critical thinking,
                             and problem-solving.
                         </p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="#" class="read-more green-style">Read More</a>
                     </div>
                     <div class="card card-middle">
                         <img src="./images/middle.png" alt="Middle School" class="card-image">
@@ -89,7 +89,7 @@
                             Empower students with advanced knowledge and life skills, preparing them for future academic
                             and personal success.
                         </p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="#" class="read-more red-style">Read More</a>
                     </div>
                 </div>
                 <div class="arrow-buttons">
