Completed stories section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="./images/logo.png" alt="Logo">
                 <span class="Nav-logo-text">SCHOOL</span>
             </div>
-            
+
 
             <ul class="nav-links">
                 <li class="nav-home"><a href="#">Home</a></li>
@@ -29,7 +29,7 @@
                 <li class="nav-facilities"><a href="#">Facilities</a></li>
                 <li class="nav-admission"><a href="#">Admission</a></li>
             </ul>
-            
+
             <div class="contact-btn">
                 <button>Contact</button>
             </div>
@@ -102,46 +102,77 @@
         <!-- story section -->
         <section class="our-stories">
             <h2 class="our-stories-title">Our Stories</h2>
+
+
             <div class="our-stories-cards-container">
-                <div class="our-stories-card our-stories-card-1">
-                    <img src="./images/story-1.png" alt="Story 1" class="our-stories-card-image">
-                    <div class="our-stories-card-content">
-                        <h3 class="our-stories-card-title">A fun toddler coloring training on classroom</h3>
-                        <p class="our-stories-card-description">Beautiful branding for changes by Never Now in
-                            Australia...</p>
+
+                <div class="child-1">
+                    <div class="our-stories-card our-stories-card-1">
+                        <img src="./images/story-1.png" alt="Story 1" class="our-stories-card-image">
+
+                        <div class="date-button">
+                            <button class="btn-style-1">Nov 19, 2024</button>
+                        </div>
+                        <div class="our-stories-card-content">
+                            <h3 class="our-stories-card-title">A fun toddler coloring training on classroom</h3>
+                            <p class="our-stories-card-description">Engaging children in creative activities to enhance
+                                their learning experience and foster a love for education. This story highlights the
+                                importance of interactive and fun learning environments.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="our-stories-card our-stories-card-2">
-                    <img src="./images/story-2.png" alt="Story 2" class="our-stories-card-image">
-                    <div class="our-stories-card-content">
-                        <h3 class="our-stories-card-title">Find out if a school fits the family’s needs</h3>
-                        <p class="our-stories-card-description">Making informed decisions to ensure a brighter future...
-                        </p>
+
+
+                <div class="child-2">
+                    <div class="our-stories-card our-stories-card-2">
+                        <img src="./images/story-2.png" alt="Story 2" class="our-stories-card-image">
+                        <div class="date-button">
+                            <button class="btn-style-2">Dec 22, 2024</button>
+                        </div>
+                        <div class="our-stories-card-content">
+                            <h3 class="our-stories-card-title">Find out if a school fits the family’s needs</h3>
+                            <p class="our-stories-card-description">Making informed decisions to ensure a brighter
+                                future...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="our-stories-card our-stories-card-3">
+                        <img src="./images/story-3.png" alt="Story 3" class="our-stories-card-image">
+                        <div class="date-button">
+                            <button class="btn-style-3">Jan 03, 2025</button>
+                        </div>
+                        <div class="our-stories-card-content">
+                            <h3 class="our-stories-card-title">Summer math & literacy centres for kids</h3>
+                            <p class="our-stories-card-description">Engaging activities to keep children learning all
+                                summer...</p>
+                        </div>
+                    </div>
+
+                    <div class="our-stories-card our-stories-card-4">
+                        <img src="./images/story-4.png" alt="Story 4" class="our-stories-card-image">
+                        <div class="date-button">
+                            <button class="btn-style-4">Jan 6, 2025</button>
+                        </div>
+                        <div class="our-stories-card-content">
+                            <h3 class="our-stories-card-title">Classroom management techniques for new tutors</h3>
+                            <p class="our-stories-card-description">Practical strategies for managing students
+                                effectively...</p>
+                        </div>
+                    </div>
+
+                    <div class="our-stories-card our-stories-card-5">
+                        <img src="./images/story-5.png" alt="Story 5" class="our-stories-card-image">
+                        <div class="date-button">
+                            <button class="btn-style-5">Jan 9, 2025</button>
+                        </div>
+                        <div class="our-stories-card-content">
+                            <h3 class="our-stories-card-title">Conversation rhymes improve kids listening</h3>
+                            <p class="our-stories-card-description">Boosting active listening through fun rhymes...</p>
+                        </div>
                     </div>
                 </div>
-                <div class="our-stories-card our-stories-card-3">
-                    <img src="./images/story-3.png" alt="Story 3" class="our-stories-card-image">
-                    <div class="our-stories-card-content">
-                        <h3 class="our-stories-card-title">Summer math & literacy centres for kids</h3>
-                        <p class="our-stories-card-description">Engaging activities to keep children learning all
-                            summer...</p>
-                    </div>
-                </div>
-                <div class="our-stories-card our-stories-card-4">
-                    <img src="./images/story-4.png" alt="Story 4" class="our-stories-card-image">
-                    <div class="our-stories-card-content">
-                        <h3 class="our-stories-card-title">Classroom management techniques for new tutors</h3>
-                        <p class="our-stories-card-description">Practical strategies for managing students
-                            effectively...</p>
-                    </div>
-                </div>
-                <div class="our-stories-card our-stories-card-5">
-                    <img src="./images/story-5.png" alt="Story 5" class="our-stories-card-image">
-                    <div class="our-stories-card-content">
-                        <h3 class="our-stories-card-title">Conversation rhymes improve kids listening</h3>
-                        <p class="our-stories-card-description">Boosting active listening through fun rhymes...</p>
-                    </div>
-                </div>
+
             </div>
             <div class="our-stories-view-all">
                 <button class="our-stories-view-all-button ">View All</button>
@@ -157,8 +188,9 @@
                 <span class="footer-title">Kids Education</span>
             </div>
             <p>
-                Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan
-                bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+                Our school is dedicated to providing a nurturing and stimulating environment for young minds. We focus
+                on holistic development, ensuring that each child grows academically, socially, and emotionally. Join us
+                in our mission to empower the next generation of leaders and innovators.
             </p>
         </div>
 
