fix challanging part

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- hero  -->
 
         <div class="marquee">
-            Welcome to <strong>Kids School</strong> - The best place to explore, learn, and grow!
+            Welcome to <strong>Kids School</strong> - The best place to explore, learn, and grow ! Create a better future with us. Your child is our priority.
         </div>
         
         
