--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- Logo and About -->
         <div class="footer-column footer-about">
             <div class="footer-logo">
-                <img class="footer-img" src="./images/logo.png" alt="Kids Education Logo">
+                <img class="footer-img" src="./images/logo 2.png" alt="Kids Education Logo">
                 <span class="footer-title">Kids <br> Education</span>
             </div>
             <p>
